DBZ-1668 Fix ToC superfluous whitespace on wide screens

--- a/_antora/supplemental_ui/css/debezium-antora.css
+++ b/_antora/supplemental_ui/css/debezium-antora.css
@@ -323,6 +323,40 @@ table.tableblock {
   }
 }
 
+@media screen and (min-width: 2560px) {
+  .doc.with-toc {
+    max-width: 100rem;
+  }
+
+  .doc.with-toc .toc {
+    left: calc(100rem + 350px);
+    right: 0;
+  }
+
+  .doc .image img {
+    max-width: 1200px;
+  }
+
+  .doc {
+    max-width: 100rem;
+  }
+}
+
+@media screen and (min-width: 3840px) {
+  .doc.with-toc, .doc {
+    max-width: 163rem;
+  }
+
+  .doc.with-toc .toc {
+    left: calc(165rem + 350px);
+    right: 0;
+  }
+
+  .doc .image img {
+    max-width: 1200px;
+  }
+}
+
 /**
  * Particularly on the connector properties and data-types sections of our documentation,
  * we have tables that contain code blocks and these tables are designed to stretch, but
